Remove the keyword: protocol handler.  Expose the functionality on nsIURIFixup instead.  Bug 337339 and bug 264830, r=biesi, sr=darin