netwerk/build/nsNetModule.cpp
@@ -231,10 +231,6 @@ NS_GENERIC_FACTORY_CONSTRUCTOR(nsViewSourceURI)
 #include "nsDataHandler.h"
 #endif
 
-#ifdef NECKO_PROTOCOL_keyword
-#include "nsKeywordProtocolHandler.h"
-#endif
-
 ///////////////////////////////////////////////////////////////////////////////
 
 #include "nsURIChecker.h"
@@ -1108,15 +1104,6 @@ static const nsModuleComponentInfo gNetModuleInfo[] = {
       nsDataHandler::Create},
 #endif
 
-#ifdef NECKO_PROTOCOL_keyword
-    // from netwerk/protocol/keyword:
-    { "The Keyword Protocol Handler", 
-      NS_KEYWORDPROTOCOLHANDLER_CID,
-      NS_NETWORK_PROTOCOL_CONTRACTID_PREFIX "keyword",
-      nsKeywordProtocolHandler::Create
-    },
-#endif
-    
 #ifdef NECKO_PROTOCOL_viewsource
     // from netwerk/protocol/viewsource:
     { "The ViewSource Protocol Handler", 
